end of wednesday

--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -1,1 +1,4 @@
-<!--Bid Field goes here-->
+<section class="bidForm">
+    <input type="text" placeholder="Your Bid Amount">
+    <button>Place Bid!</button>
+</section>
