Added Google Maps API

--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -22,7 +22,7 @@
     <p>
         Look for courses within 
         <input type="number" ng-model="miles">miles 
-        from <input type="text" placeholder="Location" ng-model="location">
+        from <input type="text" placeholder="Location" id="locationSearch">
     </p>
     <label for="golfercount">How many in your Group?</label>
     <select id="golfercount" ng-model="golfer_number">
