--- a/front-end/templates/userdashboard.html
+++ b/front-end/templates/userdashboard.html
@@ -1,4 +1,15 @@
-<section class="userDashboard">
+<!--<section class="userDashboard">
     <h2>Accepted Bid!</h2>
     <p>Course: Course Name</p>
+</section>
+-->
+
+<section class="userDashboard" >
+
+            <h2>Accepted Bid!</h2>
+            <p>Course:{{ course.name }}</p>
+            <p>Address: {{course.location}}</p>
+            <p>Bid Accepted: {{ course.bid }}</p>
+            <p>Tee Time: </p>
+
 </section>
