--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -1,4 +1,4 @@
-<section ng-controller='BidController' class="bidForm">
+<section class="bidForm">
     <label for="star">Choose Desired Course Star Rating</label>
     <select id="star" ng-model="star_select">
         <option value="1">1+ Star Course</option>
@@ -34,5 +34,5 @@
     <p>
         $ <input type="number" placeholder="Your Bid Amount" ng-model='bid_amount'> /golfer
     </p>
-    <button class="bidBtn" ng-click='submit()'>Place Bid!</button>
+    <button class="bidBtn" ng-click='submit()' ng-disabled="!valid">Place Bid!</button>
 </section>
