--- a/front-end/templates/userdashboard.html
+++ b/front-end/templates/userdashboard.html
@@ -7,9 +7,9 @@
 <section class="userDashboard" >
 
             <h2>Accepted Bid!</h2>
-            <p>Course:{{ course.name }}</p>
-            <p>Address: {{course.location}}</p>
-            <p>Bid Accepted: {{ course.bid }}</p>
-            <p>Tee Time: </p>
+            <p>Course: {{ course.name }}</p>
+            <p>Address: {{ course.location }}</p>
+            <p>Bid Amount: {{ course.bid }}</p>
+            <p>Tee Time: {{ course.time }}</p>
 
 </section>
