--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -1,12 +1,14 @@
 <section ng-controller='BidController' class="bidForm">
     <label for="star">Choose Desired Course Star Rating</label>
-    <select id="star" ng-model="star_select">
+    <!--<select id="star" ng-model="star_select">
         <option value="1">1+ Star Course</option>
         <option value="2">2+ Star Course</option>
         <option value="3">3+ Star Course</option>
         <option value="4">4+ Star Course</option>
         <option value="5">5+ Star Course</option>
-    </select>
+    </select>-->
+    <star-rating-comp on-click="onRatingChange($event)"></star-rating-comp>
+
     <label for="start">Window Start</label>
     <input type="time" id="start" ng-model="start_time">
     <label for="end">Window End</label>
@@ -34,5 +36,5 @@
     <p>
         $ <input type="number" placeholder="Your Bid Amount" ng-model='bid_amount'> /golfer
     </p>
-    <button class="bidBtn" ng-click='submit()'>Place Bid!</button>
+    <button class="bidBtn" ng-click='submit()'><a ui-sref="userDashboard">Place Bid!</a></button>
 </section>
