--- a/front-end/scss/_stars.scss
+++ b/front-end/scss/_stars.scss
@@ -16,16 +16,16 @@
     display: -moz-box;
     display: -ms-flexbox;
     display: inline-block;
-    -webkit-box-align: left;
-    -webkit-align-items: left;
-    -moz-box-align: left;
-    -ms-flex-align: left;
-    align-items: left;
-    -webkit-box-pack: left;
-    -webkit-justify-content: left;
-    -moz-box-pack: left;
-    -ms-flex-pack: left;
-    justify-content: left;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 
 /*
@@ -40,16 +40,16 @@ Star element
     display: -moz-box;
     display: -ms-flexbox;
     display: inline-block;
-    -webkit-box-align: left;
-    -webkit-align-items: left;
-    -moz-box-align: left;
-    -ms-flex-align: left;
-    align-items: left;
-    -webkit-box-pack: left;
-    -webkit-justify-content: left;
-    -moz-box-pack: left;
-    -ms-flex-pack: left;
-    justify-content: left;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     /*
   Fill states
   ==================================================================*/
