--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -23,7 +23,7 @@
     </label>
     <p>
         Look for courses within 
-        <input type="number" ng-model="miles">miles 
+        <input type="number" min="1" ng-model="miles">miles 
         from <input type="text" placeholder="Location" id="locationSearch">
     </p>
     <label for="golfercount">How many in your Group?</label>
@@ -36,6 +36,8 @@
     <p>
         $ <input type="number" placeholder="Your Bid Amount" ng-model='bid_amount'> /golfer
     </p>
-    <button class="bidBtn" ng-click='submit()' ng-disabled="!valid"><a ui-sref="userDashboard">Place Bid!</a></button>
+    <a ui-sref="userDashboard">
+        <button class="bidBtn" ng-click="submit()" ng-disabled="!valid">Place Bid</button>
+    </a>
 </section>
 
