--- a/front-end/templates/courseview.html
+++ b/front-end/templates/courseview.html
@@ -1,9 +1,9 @@
 <section class="courseView">
         <ul>
             <li ng-repeat="booking in bookings">
-                <p>{{$ctrl.which.teeTime}}</p>
-                <p>{{$ctrl.which.golfers}}</p>
-                <p>{{$ctrl.which.id}}</p>
+                <p>{{booking.teeTime}}</p>
+                <p>{{booking.golfers}}</p>
+                <p>{{booking.id}}</p>
             </li>
         </ul> 
         <div>
@@ -11,8 +11,8 @@
             <p><input type="number" placeholder="Min" ng-model="min_bid"> to <input type="number" placeholder="Max" ng-model="max_bid"></p>
             <button ng-click="changeRange()">Update Acceptable Range</button>
         </div>
-        <div>
+        <!--<div>
             <h3>Current Status: Accepting Bookings</h3>
             <button ng-click="changeStatus()">Change Status</button>
-        </div>
+        </div>-->
 </section>
