--- a/front-end/scss/style.scss
+++ b/front-end/scss/style.scss
@@ -3,6 +3,9 @@
 @include foundation-global-styles;
 @include foundation-grid; 
 
+$primary-font: "Raleway", sans-serif;
+$header-font: "Dosis", sans-serif; 
+
 @import 'stars'; 
 @import 'body'; 
 @import 'uiview'; 
