styling, courseview changes

--- a/front-end/templates/userdashboard.html
+++ b/front-end/templates/userdashboard.html
@@ -9,6 +9,7 @@
             <h2>Accepted Bid!</h2>
             <p>Course: {{ course.name }}</p>
             <p>Address: {{ course.location }}</p>
+            <p>Star Rating: {{ course.rating }}</p>
             <p>Bid Amount: {{ course.bid }}</p>
             <p>Tee Time: {{ course.time }}</p>
 
