--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -61,8 +61,9 @@
         <button class="bidBtn" ng-click="submit()" ng-disabled="!valid">Place Bid</button>
     </a>
 
-<button class="courseBtn"><a ui-sref="courseview">Course?</a></button>
-  
+<a ui-sref="courseDashboard">
+<button class="courseBtn">Course?</button>
+  </a>
 
 </section>
 
