--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -1,8 +1,10 @@
 <section>
     <h2>Step 1: Choose Location</h2>
     <p>Find A Course...</p>
-    <p>within <input type='number' ng-model="miles"></p>
+    <p>within <input type='number' ng-model="miles"> miles</p>
     <p>of</p>
     <input type="text" placeholder="Location" id="locationSearch">
-    <button>Next:Star Rating</button>
+    <footer>
+        <button>Next:Star Rating</button>
+    </footer>
 </section>
