added new bid steps

--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -5,6 +5,8 @@
     <p>of</p>
     <input type="text" placeholder="Location" id="locationSearch">
     <footer>
-        <button>Next:Star Rating</button>
+        <a ui-sref="time">
+            <button>Next: Day & Time</button>
+        </a>
     </footer>
 </section>
