Completed Mobile Bid

--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -58,7 +58,7 @@
     </p>
 
     <a ui-sref="userDashboard">
-        <button class="bidBtn" ng-click="submit()" ng-disabled="!valid">Place Bid</button>
+        <button class="bidBtn" ng-click="updateBid()" ng-disabled="!valid">Place Bid</button>
     </a>
 
 <a ui-sref="courseDashboard">
