--- a/front-end/templates/completebid.html
+++ b/front-end/templates/completebid.html
@@ -12,7 +12,7 @@
     </p>
     <footer>
         <a ui-sref="userDashboard">
-            <button class="bidBtn" ng-click="submit()">Place Bid</button>
+            <button class="bidBtn" ng-click="updateBid()">Place Bid</button>
         </a>
     </footer>
     
