--- a/front-end/templates/stars.html
+++ b/front-end/templates/stars.html
@@ -6,7 +6,7 @@
     </div>
     <footer>
         <a ui-sref="completebid">
-            <button>Next: Complete Bid</button>
+            <button ng-click="updateStars()">Next: Complete Bid</button>
         </a>
     </footer>
 </section>
