--- a/front-end/templates/time.html
+++ b/front-end/templates/time.html
@@ -22,7 +22,7 @@
 
     <footer>
         <a ui-sref="star">
-            <button>Next: Star Rating</button>
+            <button ng-click="updateTime()">Next: Star Rating</button>
         </a>
     </footer>
 
