--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -1,7 +1,13 @@
 <section>
     <h2>Step 1: Choose Location</h2>
-    <p>Find A Course...</p>
+    <!--<p>Find A Course...</p>
     <p>within <input type='number' ng-model="miles"> miles</p>
+    <p>of</p>
+    <input type="text" placeholder="Location" id="locationSearch">-->
+    <p>Find A Course...</p>
+    <p>within</p>
+    <input type="range" ng-model="miles">
+    <label for="fader">miles</label>
     <p>of</p>
     <input type="text" placeholder="Location" id="locationSearch">
     <footer>
