--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -6,7 +6,7 @@
     <input type="text" placeholder="Location" id="locationSearch">-->
     <p>Find A Course...</p>
     <p>within</p>
-    <input type="range" ng-model="miles">
+    <input type="range" min="1" max="50" value="10" ng-model="miles">
     <label for="fader">miles</label>
     <p>of</p>
     <input type="text" placeholder="Location" id="locationSearch">
