--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -4,12 +4,16 @@
     <p>within <input type='number' ng-model="miles"> miles</p>
     <p>of</p>
     <input type="text" placeholder="Location" id="locationSearch">-->
+
+
     <p>Find A Course...</p>
     <p>within</p>
-    <input type="range" min="1" max="50" value="10" ng-model="miles">
+    <input id="fader" type="range" min="1" max="50" value="25" ng-model="miles" step="1">
+    <output for="fader" id="mileage">{{ miles }}</output>
     <label for="fader">miles</label>
     <p>of</p>
     <input type="text" placeholder="Location" id="locationSearch">
+
     <footer>
         <a ui-sref="time">
             <button ng-click="updateLocation()">Next: Day & Time</button>
