changes to styling/map search

--- a/front-end/templates/userdashboard.html
+++ b/front-end/templates/userdashboard.html
@@ -7,6 +7,7 @@
 <section class="userDashboard" >
 
             <h2>Accepted Bid!</h2>
+            <img src="{{course.image}}">
             <p>Course: {{ course.name }}</p>
             <p>Address: {{ course.location }}</p>
             <p>Star Rating: {{ course.rating }}</p>
