--- a/front-end/scss/style.scss
+++ b/front-end/scss/style.scss
@@ -7,6 +7,7 @@ $primary-font: "Raleway", sans-serif;
 $header-font: "Dosis", sans-serif; 
 
 @import 'stars'; 
+@import 'mobile';
 @import 'body'; 
-@import 'uiview'; 
+// @import 'uiview'; 
 
