--- a/front-end/templates/mobile.html
+++ b/front-end/templates/mobile.html
@@ -1,10 +1,17 @@
-<section>
-    <h1>teeUp</h1>
-    <h3>Welcome</h3>
-    <a ui-sref="location">
-        <button>Bid for a Tee-Time</button>
-    </a>
-    <a ui-sref="courseDashboard">
-        <button>Golf Course Operator Login</button>
-    </a>
+<section class="mobile">
+    <header>
+        <img src="assets/noun_934403_cc.png">
+        <h1>teeUp</h1>
+        <p>On your time. On your budget.</p>
+    </header>
+    <div>
+        <a ui-sref="location">
+            <button class="bigBtn">Bid for a Tee-Time</button>
+        </a>
+    </div>
+    <div>
+        <a ui-sref="courseDashboard">
+            <button class="bigBtn">Operator Login</button>
+        </a>
+    </div>
 </section>
