--- a/front-end/scss/_body.scss
+++ b/front-end/scss/_body.scss
@@ -1,8 +1,8 @@
 body {
     @include grid-row(); 
     color: white; 
-    // background-image: url("http://wallpaper-gallery.net/images/golf-wallpaper-for-iphone/golf-wallpaper-for-iphone-8.jpg");
-    background-color: green;
+    background-image: url("http://wallpaper-gallery.net/images/golf-wallpaper-for-iphone/golf-wallpaper-for-iphone-8.jpg");
+    // background-color: green;
     background-size: 100%; 
     background-size: cover; 
     max-width: 100%; 
