--- a/front-end/scss/style.scss
+++ b/front-end/scss/style.scss
@@ -9,5 +9,6 @@ $header-font: "Dosis", sans-serif;
 @import 'stars'; 
 @import 'mobile';
 @import 'body'; 
+@import 'location';
 // @import 'uiview'; 
 
