course location map

--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -57,9 +57,9 @@
         $ <input type="number" placeholder="Your Bid Amount" ng-model='bid_amount'> /golfer
     </p>
 
-    <a ui-sref="userDashboard">
+    <!--<a ui-sref="userDashboard">-->
         <button class="bidBtn" ng-click="updateBid()" ng-disabled="!valid">Place Bid</button>
-    </a>
+    <!--</a>-->
 
 <a ui-sref="courseDashboard">
 <button class="courseBtn">Course?</button>
