--- a/front-end/templates/completebid.html
+++ b/front-end/templates/completebid.html
@@ -1,4 +1,7 @@
-<section>
+<section class="mobileStyle">
+    <header>
+        <h1>teeUp</h1>
+    </header>
     <h2>Step 4: Complete Bid</h2>
     <label for="golfercount">How many in your Group?</label>
     <select id="golfercount" ng-model="golfer_number">
