--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -1,4 +1,4 @@
-<section class='location'>
+<section class='location mobileStyle'>
     <header>
         <h1>teeUp</h1>
     </header>
@@ -10,7 +10,7 @@
         <label for="fader">miles</label>
         <p>of</p>
         <input type="text" placeholder="" id="locationSearch">
-        <label>Search from Location</label>
+        <label id="searchLabel">Search from Location</label>
     </div>
 
     <footer>
