--- a/front-end/templates/stars.html
+++ b/front-end/templates/stars.html
@@ -1,4 +1,7 @@
-<section>
+<section class="mobileStyle">
+    <header>
+        <h1>teeUp</h1>
+    </header>
     <h2>Step 3: Choose Star Rating</h2>
     <p>Select your Minimum Acceptable Course Rating</p>
     <div class="starBox">
