--- a/front-end/scss/_mobileHome.scss
+++ b/front-end/scss/_mobileHome.scss
@@ -3,10 +3,10 @@
         margin: 20px 0px 40px 0px;
         text-align: center;
         img {
-            width: 200px;
+            width: 150px;
         }
         h1 {
-            margin: 0;
+            margin: 5px 0px 0px 0px;
             font-family: $header-font;
         }
         p {
