--- a/front-end/scss/style.scss
+++ b/front-end/scss/style.scss
@@ -7,12 +7,13 @@ $primary-font: "Raleway", sans-serif;
 $header-font: "Dosis", sans-serif; 
 
 @import 'stars'; 
-@import 'mobile';
+@import 'mobileStyle';
+@import 'mobileHome';
 @import 'body'; 
-<<<<<<< HEAD
-@import 'userDash'; 
-=======
+@import 'time';
+
+@import 'userDash';
 @import 'location';
->>>>>>> 80d92dcf11a7796ae82f1bca84a1393c81140841
+
 // @import 'uiview'; 
 
