--- a/front-end/templates/time.html
+++ b/front-end/templates/time.html
@@ -1,4 +1,7 @@
-<section>
+<section class="time mobileStyle">
+    <header>
+        <h1>teeUp</h1>
+    </header>
     <h2>Step 2: Choose Day & Time</h2>
     <div class="windowStart">
         <label for="start">Window Start</label>
@@ -22,7 +25,7 @@
 
     <footer>
         <a ui-sref="star">
-            <button ng-click="updateTime()">Next: Star Rating</button>
+            <button ng-click="updateTime()">Next: Star Rating >></button>
         </a>
     </footer>
 
