--- a/front-end/scss/style.scss
+++ b/front-end/scss/style.scss
@@ -11,6 +11,7 @@ $header-font: "Dosis", sans-serif;
 @import 'mobileHome';
 @import 'body'; 
 @import 'time';
+@import 'homePage';
 @import 'userDash';
 @import 'location';
 
