--- a/front-end/templates/courseview.html
+++ b/front-end/templates/courseview.html
@@ -1,9 +1,10 @@
 <section class="courseView">
+        
         <ul>
             <li ng-repeat="booking in bookings">
-                <p>{{booking.teeTime}}</p>
+                <p>{{booking.course.name}}</p>
                 <p>{{booking.golfers}}</p>
-                <p>{{booking.id}}</p>
+                <p>{{booking.startTime}}</p>
             </li>
         </ul> 
         <div>
