styling and star sizing

--- a/front-end/scss/_time.scss
+++ b/front-end/scss/_time.scss
@@ -19,8 +19,8 @@
             background: transparent;
             color: white;
             outline: none;
-            text-align: center;
-            font-size: 1.2em;
+            // text-align: center;
+            // font-size: 1.2em;
         }
     }
     .windowStart {
