--- a/front-end/scss/style.scss
+++ b/front-end/scss/style.scss
@@ -11,9 +11,12 @@ $header-font: "Dosis", sans-serif;
 @import 'mobileHome';
 @import 'body'; 
 @import 'time';
+@import 'starSelect';
+@import 'completeBid';
 @import 'homePage';
 @import 'userDash';
 @import 'location';
+
 
 // @import 'uiview'; 
 
