--- a/front-end/templates/completebid.html
+++ b/front-end/templates/completebid.html
@@ -1,20 +1,35 @@
-<section class="mobileStyle">
+<section class="completeBid mobileStyle">
     <header>
         <h1>teeUp</h1>
     </header>
     <h2>Step 4: Complete Bid</h2>
-    <label for="golfercount">How many in your Group?</label>
-    <select id="golfercount" ng-model="golfer_number">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-    </select>
-        <p>Price</p>
-        <input id="fader" type="range" min="1" max="100" value="50" ng-model="bid_amount" step="1">
-        <output for="fader" id="amount">$ {{ bid_amount }}</output> 
-        <label for="fader">/golfer</label>
-    <footer>
+    <div ng-show="bidAllow">
+        <div class="golfer">
+            <label for="golfercount">How many in your Group?</label>
+            <select id="golfercount" ng-model="golfer_number">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+            </select>
+        </div>
+        <div class='price'>
+            <h3 id='descrip'>Your Bid:</h3>
+            <input id="fader" type="range" min="1" max="100" value="50" ng-model="bid_amount" step="1">
+            <div>
+                <output class="bidReadout" for="fader" id="amount">$ {{ bid_amount }}</output> 
+                <label class="bidReadout" for="fader">/golfer</label>
+            </div>
+        </div>
+    </div>
+    <div class="reject" ng-show="reject">
+        <h3>Bid Rejected</h3> 
+        <h3>Take a Mulligan and Try Again!</h3>
+        <a ui-sref="location">
+            <button class="bigBtn">Modify Bid</button>
+        </a> 
+    </div>
+    <footer ng-show="bidAllow">
        <button class="bidBtn" ng-click="updateBid()">Place Bid</button>
     </footer>
     
