--- a/front-end/scss/style.scss
+++ b/front-end/scss/style.scss
@@ -14,6 +14,6 @@ $header-font: "Dosis", sans-serif;
 @import 'homePage';
 @import 'userDash';
 @import 'location';
-
-// @import 'uiview'; 
+@import 'popular'; 
+@import 'uiview'; 
 
