logo and momentJS integration

--- a/front-end/templates/mobile.html
+++ b/front-end/templates/mobile.html
@@ -1,7 +1,7 @@
 <section class="mobile">
     <header>
-        <img src="assets/noun_934403_cc.png">
-        <h1>teeUp</h1>
+        <img src="assets/teeup_logo.png">
+        <!--<h1>teeUp</h1>-->
         <p>On your time. On your budget.</p>
     </header>
     <div>
