adding public images and compiling scss

--- a/front-end/scss/_body.scss
+++ b/front-end/scss/_body.scss
@@ -1,8 +1,7 @@
 body {
-    background-color: ##3f99de;
-    background-color: white; 
-    color: black;
-    font-size: 1.5em; 
+    background-color: #3f99de;
+    color: white;
+    // font-size: 1.5em; 
 }
 
 
@@ -22,6 +21,3 @@ body {
 //     font-weight: bold; 
 // }
 
-
-
-}
