--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -1,9 +1,11 @@
 <section class="bidForm">
 
 
-    <div class="header">
-        <h1 class="appName">teeUp<h1>
-    </div>
+    <header class="header">
+        <img src="assets/teeup_logo.png">
+        <!--<h1>teeUp</h1>-->
+        <p>On your time. On your budget.</p>
+    </header>
 
     <div class="error" ng-show="error">
         <h3>No Courses Match Criteria. Take a Mulligan and Try Again!</h3>
@@ -12,7 +14,7 @@
         <label for="star">Choose Desired Course Star Rating</label>
         
         <div class="starBox">
-            <star-rating-comp on-click="onRatingChange($event)"></star-rating-comp>
+            <star-rating-comp size="'large'"on-click="onRatingChange($event)"></star-rating-comp>
         </div>
     </div>
 
@@ -45,9 +47,8 @@
                 <input type="number" placeholder="Miles" ng-model="miles">
             </div>
 
-        <span>miles from</span> 
-
             <div class="loc">
+                <span>miles from</span> 
                 <input type="text" placeholder="Location" id="locationSearch">
             </div>
         </p>
