--- a/front-end/scss/popular.scss
+++ b/front-end/scss/popular.scss
@@ -1,21 +1,34 @@
         .popular {
             @include grid-column(12); 
-            border: 1px solid #194BFF; 
-            background-color: #194BFF;
+            // border: 1px solid #194BFF; 
+            // background-color: #194BFF;
+            background-color: #3f99de;
             // position: fixed;
             bottom: 0px;
             height: 200px; 
             left:0px;
+            color: white; 
 
             ul{
                 list-style: none;
             }
             
             .course {
-                @include grid-column(3);
-                border: 1px solid black;  
-                background-color: white;
-                margin-bottom: 20%; 
+                @include grid-column(12);
+                // font-family: $primary-font;
+                // border: 1px solid white;  
+                // background-color: #29c566;
+                // margin-bottom: 20%; 
+                // border-radius: 50px; 
+
+                img {
+                    height: 200px; 
+                    width: 100%; 
+                    text-align: center; 
+                    display: block; 
+                    margin-left: 0;  
+                    // border-radius: 100px; 
+                }
             
             }
         }
