--- a/front-end/templates/popular.html
+++ b/front-end/templates/popular.html
@@ -2,7 +2,8 @@
     <h2>Featured Courses</h2>
     <ul>
         <li class="course">
-            <img src="{{popCourse.image}}">
+            <img src="{{popCourse.imageHero}}">
+            <!--<p>{{ popCourse.imageHero }}</p>-->
             <p>Course: {{ popCourse.name }}</p>
             <p>Star Rating: {{ popCourse.starRating }}</p>
         </li>
