--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -9,8 +9,7 @@
         <output for="fader" id="mileage">{{ miles }}</output>
         <label for="fader">miles</label>
         <p>of</p>
-        <input type="text" placeholder="" id="locationSearch">
-        <label id="searchLabel">Search from Location</label>
+        <input type="text" placeholder="Search From Location" id="locationSearch">
     </div>
 
     <footer>
