--- a/front-end/scss/_mobileHome.scss
+++ b/front-end/scss/_mobileHome.scss
@@ -5,12 +5,8 @@
         img {
             width: 150px;
         }
-        h1 {
-            margin: 5px 0px 0px 0px;
-            font-family: $header-font;
-        }
         p {
-            margin: 0;
+            margin-top: 30px;
             font-family: $primary-font;
         }
     }
