--- a/front-end/templates/mobile.html
+++ b/front-end/templates/mobile.html
@@ -1,6 +1,6 @@
 <section class="mobile">
     <header>
-        <img src="assets/teeup_logo.png">
+        <img class="logo" src="assets/teeup_logo.png">
         <p>On your time. On your budget.</p>
     </header>
     <div>
