--- a/front-end/templates/stars.html
+++ b/front-end/templates/stars.html
@@ -1,6 +1,6 @@
 <section class="starSelect mobileStyle">
     <header>
-        <h1>teeUp</h1>
+        <img class="logo" src="assets/teeup_logo.png">
     </header>
     <h2>Step 3: Choose Star Rating</h2>
     <p>Select Minimum Course Rating!</p>
