--- a/front-end/scss/_mobileHome.scss
+++ b/front-end/scss/_mobileHome.scss
@@ -2,12 +2,13 @@
     header {
         margin: 20px 0px 40px 0px;
         text-align: center;
-        img {
+        .logo {
             width: 150px;
         }
         p {
             margin-top: 30px;
             font-family: $primary-font;
+            font-weight: 800;
         }
     }
     div {
