--- a/front-end/templates/completebid.html
+++ b/front-end/templates/completebid.html
@@ -1,6 +1,6 @@
 <section class="completeBid mobileStyle">
     <header>
-        <h1>teeUp</h1>
+        <img class="logo" src="assets/teeup_logo.png">
     </header>
     <h2>Step 4: Complete Bid</h2>
     <div ng-show="bidAllow">
