--- a/front-end/templates/location.html
+++ b/front-end/templates/location.html
@@ -1,6 +1,6 @@
 <section class='location mobileStyle'>
     <header>
-        <h1>teeUp</h1>
+        <img class="logo" src="assets/teeup_logo.png">
     </header>
     <h2>Step 1: Choose Location</h2>
     <div>
