--- a/front-end/templates/time.html
+++ b/front-end/templates/time.html
@@ -1,6 +1,6 @@
 <section class="time mobileStyle">
     <header>
-        <h1>teeUp</h1>
+        <img class="logo" src="assets/teeup_logo.png">
     </header>
     <h2>Step 2: Choose Day & Time</h2>
     <h4>Find a time...</h4>
