--- a/front-end/templates/userdashboard.html
+++ b/front-end/templates/userdashboard.html
@@ -14,7 +14,7 @@
         <!--<img src="{{course.image}}">-->
         <div class="courseInfo">
             <div class="left">
-                <img src="{{course.image}}">
+                <img class="coursePic" src="{{course.image}}">
                 <label><h2>{{ course.name }}</h2></label>
                 <p><span class="label">Tee Time:</span> {{ course.time }}</p>
                 <p><span class="label">Address:</span></p>
