--- a/front-end/templates/bidfield.html
+++ b/front-end/templates/bidfield.html
@@ -76,7 +76,7 @@
     <button class="bidBtn" ng-click="updateBid()" ng-disabled="!valid">Place Bid</button>
 
     <a ui-sref="courseDashboard">
-        <button class="courseBtn">Course?</button>
+        <button class="courseBtn">Are You A Course?</button>
     </a>
 </div>
 
