--- a/front-end/templates/time.html
+++ b/front-end/templates/time.html
@@ -7,10 +7,12 @@
     <div class="day">
         <label>
             <input type="radio" name="day" value="today" ng-model="selected_day">
+            <div></div>
             Today
         </label>
         <label>
             <input type="radio" name="day" value="tomorrow" ng-model="selected_day">
+            <div></div>
             Tomorrow
         </label>
     </div>
