--- a/front-end/templates/courseview.html
+++ b/front-end/templates/courseview.html
@@ -10,16 +10,17 @@
         </div>
         
         <div class="list">
+            <h3>Tee Times</h3>
         <ul ng-repeat="booking in bookings">
-            <p><span class="label"> Time: </span> {{booking.startTime}}</p>
-            <p><span class="label"> Number of Golfers: </span> {{booking.golfers}}</p>
+            <p><span class="labeltime"> Time: </span> {{booking.startTime}}</p>
+            <p><span class="labelnum"> Number of Golfers: </span> {{booking.golfers}}</p>
         </ul> 
         </div>
 
-        <div>
+        <div class="curRange">
             <h3>Current Range: ${{range.min}} to ${{range.max}}</h3>
             <p><input type="number" placeholder="Min" ng-model="min_bid"> to <input type="number" placeholder="Max" ng-model="max_bid"></p>
-            <button ng-click="changeRange()">Update Acceptable Range</button>
+            <button ng-click="changeRange()">Update Range</button>
         </div>
     </div>
         <!--<div>
